--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+button {
+  cursor: pointer;
+  font-family: inherit;
+  color: currentColor;
+  border: none;
+}
